Added survey component

--- a/TeamSurveyProject/src/app/app.component.html
+++ b/TeamSurveyProject/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>Welcome to Team Evaluations!</h1>
+<button type="button" [routerLink]="['/home']"> Home </button>
+<button type="button" [routerLink]="['/survey']"> Survey </button>
 
 <router-outlet></router-outlet>
