Added survey questions

--- a/TeamSurveyProject/src/app/+survey/survey.component.html
+++ b/TeamSurveyProject/src/app/+survey/survey.component.html
@@ -1,3 +1,25 @@
+<h2>Team Evaluation Survey</h2>
+
 <p>
-  
+1. Using the Teamwork Rubric, give your teammate a 1-5 score in
+each of the following categories:
+<br> a. Meeting Contributions: 
+<br> b. Team Building:
+<br> c. Work Ethic:
+<br> d. Fosters Constructions Team Climate:
+<br> e. Response to Conflict:
+<br> f. If you gave your teammate a score of 1 (lowest score) in any
+category, please write a brief (2-3 sentence) explanation why. Include
+specific incidents or examples if possible.
+</p>
+
+<p>
+2. Please write a brief (3-4 sentences) evaluation of your teammate. Include
+what they did well and what they need to work on.
+</p>
+
+
+<p> 
+3. What percentage of the total work do you estimate your teammate did? (Keep in 
+mind that this implies your entire team's percentages should sum to 100%.
 </p>
