--- a/TeamSurveyProject/src/app/+home/home.component.html
+++ b/TeamSurveyProject/src/app/+home/home.component.html
@@ -1,3 +1,15 @@
-<p>
-  home works!
-</p>
+<h1>Add a new password</h1>
+<form #passwordForm="ngForm" fxLayout="column" (ngSubmit)="onSubmit()">
+  <mat-input-container>
+    <input matInput required placeholder="First Name" name="firstName" [(ngModel)]="dummyData.FirstName">
+  </mat-input-container>
+  <mat-input-container>
+    <input matInput required placeholder="Last Name" name="lastName" [(ngModel)]="dummyData.LastName">
+  </mat-input-container>
+  <!-- <mat-input-container>
+    <input matInput required placeholder="Password" name="password" [(ngModel)]="formPassword.password">
+  </mat-input-container> -->
+  <br><br>
+  <button mat-button type='button' (click)="clearForm()">Cancel</button>
+  <button mat-button [disabled]="!passwordForm.form.valid" type='submit'>Save</button>
+</form>
