re add mat-toolbar

--- a/TeamSurveyProject/src/app/app.component.html
+++ b/TeamSurveyProject/src/app/app.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar>
+  <h1>Team Survey</h1>
+  <span fxFlex></span>
   <button *ngIf="showSignOut" mat-icon-button [matMenuTriggerFor]="signOutMenu">
     <mat-icon>more_vert</mat-icon>
   </button>
