--- a/TeamSurveyProject/src/app/+home/home.component.html
+++ b/TeamSurveyProject/src/app/+home/home.component.html
@@ -1,29 +1,10 @@
-<html lang="en">
-    <head>
-    <meta charset="utf-8">
-    <title>Team Survey Project</title>
-    <div style= "text-align:center">
-        <h>
-     Welcome to The Survey
-     </h>
-     <base href="/">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="home.component.css">
-</head>
-<body>
-         <div class= "login-box">
-       <h1>Login Here</h1>
-       <from>
-         <p>Username</p>
-         <input type= "text" name "username" placeholder="Enter Username">
-         <p>Password</p>
-         <input type="text" name="password" placeholder="Enter password">
-         <button type="button">Start</button> 
-         <a href="#">Forget password</a>
-       </from>
-
-     </div>
-    </body>
- </html>   
+<h1>
+    {{title}}
+</h1>
+<hr>
+<!--div style= "text-align:center"-->
+<h1>Login Here</h1>
+<div id= "login-box">Login Here</div>
+    <hr> 
+       
+</hr>
