--- a/TeamSurveyProject/src/styles.scss
+++ b/TeamSurveyProject/src/styles.scss
@@ -19,13 +19,13 @@ body{
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
-
 }
 a{
     margin: 0;
     padding: 0 0 20px;
     text-align: center;
     font-size: 22px;
+    font-weight: bold;
 }
 h1{
     margin: 0;
@@ -37,9 +37,9 @@ h1{
     margin: 0;
     padding: 0;
     font-weight: bold;
-
 }
 .login-box input{
+    width: 100%;
     margin-bottom: 20px;
 
 }
