--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -1,9 +1,15 @@
-<mat-card>
-  <mat-card-title>
-    <h2>Welcome</h2>
-  </mat-card-title>
-  <mat-card-content fxLayout="column" fxLayoutAlign="none center">
-    <button mat-raised-button (click)="signInWithGoogle()">Google Login</button>
-    <p>In order to start start a survery you first need to sign in.</p>
-  </mat-card-content>
-</mat-card>
+<h1>
+  <div class="login-box">
+    <h1>Login Here</h1>
+    <p>Username</p>
+    <input type="text" name="username" placeholder="Enter Username" />
+    <p>Password</p>
+    <input type="password" name="password" placeholder="Enter password" />
+    <div style="text-align:center">
+      <a href="next page">
+        <button type="button">Start</button>
+      </a>
+    </div>
+    <a href="#">Forgot password</a>
+  </div>
+</h1>
