--- a/TeamSurveyProject/src/app/+signin/signin.component.scss
+++ b/TeamSurveyProject/src/app/+signin/signin.component.scss
@@ -1,29 +1,57 @@
-$horz-padding: 30px;
-
-mat-card {
+body{
+    margin: 0;
     padding: 0;
+    background-size:cover;
+    background-position: center;
+    font-family: sans-serif;
+}
 
-    mat-card-title {
-        background-color: #089889;
-        padding: 15px $horz-padding;
-        margin: 0;
-        h2 {
-            margin: 0;
-            color: white;
-            font-weight: normal;
-        }
-    }
+.login-box{
+    width: 320px;
+    height: 420px;
+    background: rgba(0, 0, 0, 0.5);
+    color:#fff;
+    top: 55%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+a{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+h1{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+}
+.login-box p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+.login-box input{
+    width: 100%;
+    margin-bottom: 20px;
 
-    mat-card-content {
-        padding: $horz-padding;
-        color: rgba(0, 0, 0, 0.7);
-        font-size: 18px;
-        button {
-            background-color: #800000;
-            color: white;
-            font-size: 18px;
-            margin: 20px;
-            padding: 5px 20px;
-        }
-    }
+}
+.login-box input[type= "text"], input[type="password"]{
+    border:none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height:40px;
+    color: #fff;
+    font-size: 16px;
+}
+.login-box a{
+    text-decoration: none;
+    font-size: 14px;
+    color: #fff;
 }
