Redirect signed in user to home, edited home buttons to allow navigation to survey

--- a/TeamSurveyProject/src/app/+home/home.component.html
+++ b/TeamSurveyProject/src/app/+home/home.component.html
@@ -1,4 +1,6 @@
-<!-- <h1>Add a new password</h1>
+<h1>Welcome to Team Evaluations!</h1>
+
+<h1>Add a new password</h1>
 <form #passwordForm="ngForm" fxLayout="column" (ngSubmit)="onSubmit()">
   <mat-input-container>
     <input matInput required placeholder="First Name" name="firstName" [(ngModel)]="dummyData.FirstName">
@@ -11,6 +13,5 @@
   <button mat-button [disabled]="!passwordForm.form.valid" type='submit'>Save</button>
 </form>
 
-<h1>Welcome to Team Evaluations!</h1>
-<button type="button" [routerLink]="['/home']"> Home </button>
-<button type="button" [routerLink]="['/survey']"> Survey </button> -->
+
+
