--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -16,7 +16,7 @@
 <ng-container *ngIf="user | async; else login">
 
   <div class="notification is-success">
-    You are now logged in.
+    You are now logged in. Redirecting to home page...
   </div>
 
 </ng-container>
