--- a/TeamSurveyProject/src/app/team-display-card/team-display-card.component.html
+++ b/TeamSurveyProject/src/app/team-display-card/team-display-card.component.html
@@ -1,3 +1,10 @@
-<p>
-  team-display-card works!
-</p>
+<!-- <mat-card>
+  <mat-card-title>
+  </mat-card-title>
+  <mat-card-content>
+
+  </mat-card-content>
+  <mat-card-actions>
+
+  </mat-card-actions>
+</mat-card> -->
