--- a/TeamSurveyProject/src/app/+modifyteam/modifyteam.component.scss
+++ b/TeamSurveyProject/src/app/+modifyteam/modifyteam.component.scss
@@ -1,8 +1,8 @@
-#AddTeamForm {
+#AddTeamMemberForm {
     width: fit-content;
     margin-bottom: 1vmax;
 }
-.teamTemplate {
+.teamMemberTemplate {
     width: fit-content;
     font-size: 1.2vmax;
     text-align: center;
