--- a/TeamSurveyProject/src/app/app.component.html
+++ b/TeamSurveyProject/src/app/app.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
   <h1>Team Survey</h1>
   <span fxFlex></span>
+  <button mat-button type="button" [routerLink]="['/home']"> Home </button>
+  <button mat-button type="button" [routerLink]="['/createteam']"> Create Team </button>
+  <button mat-button type="button" [routerLink]="['/modifyteam']"> Modify Team </button>
   <button *ngIf="showSignOut" mat-icon-button [matMenuTriggerFor]="signOutMenu">
     <mat-icon>more_vert</mat-icon>
   </button>
