--- a/TeamSurveyProject/src/app/+signin/signin.component.scss
+++ b/TeamSurveyProject/src/app/+signin/signin.component.scss
@@ -7,16 +7,14 @@ body{
 }
 
 .login-box{
-    width: 320px;
+    width: 400px;
     height: 420px;
     background: rgba(0, 0, 0, 0.5);
     color:#fff;
-    top: 55%;
-    left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    padding: 70px 30px;
+    padding:370px 30px;
 }
 a{
     margin: 0;
@@ -30,6 +28,7 @@ h1{
     padding: 0 0 20px;
     text-align: center;
     font-size: 22px;
+    font-weight: bold;
 }
 .login-box p{
     margin: 0;
@@ -55,3 +54,5 @@ h1{
     font-size: 14px;
     color: #fff;
 }
+
+    
