--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -1,15 +1,15 @@
-<h1>
+<div class='loginBoxContainer'>
   <div class="login-box">
     <h1>Login Here</h1>
     <p>Username</p>
     <input type="text" name="username" placeholder="Enter Username" />
     <p>Password</p>
     <input type="password" name="password" placeholder="Enter password" />
-    <div style="text-align:center">
+    <div>
       <a href="next page">
         <button type="button">Start</button>
       </a>
     </div>
     <a href="#">Forgot password</a>
   </div>
-</h1>
+</div>
