changed the style

--- a/TeamSurveyProject/src/app/+signin/signin.component.scss
+++ b/TeamSurveyProject/src/app/+signin/signin.component.scss
@@ -13,6 +13,12 @@
     box-sizing: border-box;
     padding: 70px 30px;
 }
+.login-box h1{
+    margin: 0;
+    padding:0 0 20px;
+    font-size: 22px;
+    font-weight: bold;
+}
 .login-box p{
     margin: 0;
     padding: 0;
