--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -10,6 +10,8 @@
         <button type="button">Start</button>
       </a>
     </div>
+    <div style="font-size:16px; font-weight: bold">
     <a href="#">Forgot password</a>
+    </div>
   </div>
 </div>
