--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -10,8 +10,11 @@
         <button type="button">Start</button>
       </a>
     </div>
-    <div style="font-size:16px; font-weight: bold">
-    <a href="#">Forgot password</a>
-    </div>
+      <div style="font-size:16px; font-weight: bold">
+        <a href="#">Forgot password</a>
+      </div>
+       <div>
+         <img src="../assets/images/IMAGE.JPG" alt="campus image">
+       </div>
   </div>
 </div>
