changed the scss class

--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -1,4 +1,7 @@
-<div class='loginBoxContainer'>
+<body>
+<div class= "Intro">
+    <img src="../assets/images/IMAGE.JPG" alt="campus image">
+    
   <div class="login-box">
     <h1>Login Here</h1>
     <p>Username</p>
@@ -13,8 +16,7 @@
       <div style="font-size:16px; font-weight: bold">
         <a href="#">Forgot password</a>
       </div>
-       <div>
-         <img src="../assets/images/IMAGE.JPG" alt="campus image">
-       </div>
+       
   </div>
 </div>
+</body>
