--- a/TeamSurveyProject/src/app/+signin/signin.component.scss
+++ b/TeamSurveyProject/src/app/+signin/signin.component.scss
@@ -1,22 +1,36 @@
-.loginBoxContainer {
-    text-align: center;
-    margin-top: 20px;
+.body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+.Intro{
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    background-size: cover;
+    background-position: center;
+    font-family: sans-serif;
 }
 
 .login-box{
-    margin: auto;
-    text-align: center;
-    width: 320px;
-    height: 420px;
+    width: 370px;
+    height: 450px;
     background: rgba(0, 0, 0, 0.5);
     color:#fff;
+    top:50%;
+    left:50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
+    
 }
-.login-box h1{
+ h1{
     margin: 0;
     padding:0 0 20px;
     font-size: 22px;
+    text-align: center;
     font-weight: bold;
 }
 .login-box p{
