--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -1,22 +1,20 @@
 <body>
-<div class= "Intro">
+  <div>
     <img src="../assets/images/IMAGE.JPG" alt="campus image">
-    
-  <div class="login-box">
+  </div> 
+  <div class= "login-box">
     <h1>Login Here</h1>
     <p>Username</p>
-    <input type="text" name="username" placeholder="Enter Username" />
-    <p>Password</p>
+    <input type="text" name="username" placeholder="Enter username" />
+    <p>password</p>
     <input type="password" name="password" placeholder="Enter password" />
-    <div>
+    <div style="text-align:center">
       <a href="next page">
         <button type="button">Start</button>
       </a>
     </div>
-      <div style="font-size:16px; font-weight: bold">
-        <a href="#">Forgot password</a>
-      </div>
-       
-  </div>
-</div>
+     <div style="font-size:16px; font-weight:bold">
+      <a href="#">Forgot password</a>
+     </div> 
+  </div>   
 </body>
