Update queries to get survey info

--- a/TeamSurveyProject/src/app/+createteam/createteam.component.html
+++ b/TeamSurveyProject/src/app/+createteam/createteam.component.html
@@ -13,12 +13,17 @@
     <input matInput required placeholder="Course" name="Course" [(ngModel)]="team.Course">
   </mat-input-container>
   <mat-input-container>
-      <input matInput required placeholder="Semester" name="Semester" [(ngModel)]="team.Semester">
-    </mat-input-container>
+    <input matInput required placeholder="Semester" name="Semester" [(ngModel)]="team.Semester">
+  </mat-input-container>
   <button mat-button type='button' (click)="clearForm()">Clear Form</button>
   <button mat-button [disabled]="!AddTeamForm.form.valid" type='submit'>Create</button>
 </form>
 
-<ng-container *ngFor="let d of teams; let index=index;">
-  <div class='teamTemplate'>{{ team[index].Name }} {{ team[index].Instructor }}</div>
+<ng-container *ngFor='let d of teams; let index=index;'>
+  <mat-card class='teamTemplate' fxLayout='row'>
+    <div fxFlex>
+      <div>{{ teams[index].Name }} {{ teams[index].Course }}</div>
+      <div>{{ teams[index].Semester }}</div>
+    </div>
+  </mat-card>
 </ng-container>
